kong/deploy-konga.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
spec:
  selector:
    matchLabels:
      app: konga
  replicas: 1
  template:
    metadata:
      labels:
        name: konga
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:0.14.9
        ports:
        - containerPort: 1337
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: konga
  name: konga-svc
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 1337
  selector:
    app: konga
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: konga
spec:
  rules:
  - host: konga.example.com
    http:
      paths:
      - backend:
          serviceName: konga-svc
          servicePort: 443
        path: /
